# sc2-techtree

./: .gitignore  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  rustfmt.toml
data/: data.json
docs/: SchemaPlan.dot  SchemaPlan.txt  Visuals.md
generate/: collect.py  graph.py  patch.py  visualize.py
generate/patches/: ability_produces_missing.toml  ability_produces_replace.toml  ability_requirement.toml  unit_ability_disallowed.toml  unit_ability_missing.toml
src/: ability.rs  attribute.rs  cost.rs  ids.rs  lib.rs  race.rs  requirement.rs  unittype.rs  upgrade.rs  weapon.rs
tests/: get_create_ability.rs  load_data.rs  test_query.rs
