[package]
name = "sc2-techtree"
description = "StarCraft II tech tree"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

repository = "https://github.com/Dentosal/sc2-techtree"
readme = "README.md"

keywords = ["sc2", "starcraft2"]
categories = ["games"]

license = "MIT"

exclude = [
    "docs/images/techtree_*.png",
    "generate/**/*.py",
]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noisy_float = { version = "0.1.9", features = ["serde-1"] }

[dev-dependencies]
maplit = "1.0.1"